# buse

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/buse/: main.py  mcp_server.py  models.py  session.py  utils.py  vision.py
src/buse/features/: inspection.py  interaction.py
tests/: test_cli.py  test_cli_coverage.py  test_core_internals.py  test_coverage_edges.py  test_coverage_gap.py  test_coverage_paths.py  test_coverage_push.py  test_execute_tool.py  test_main_cli.py  test_main_cli_coverage.py  test_main_coverage.py  test_main_coverage_edges.py  test_main_internals.py  test_main_observation.py  test_main_omniparser_probe.py  test_main_ops.py  test_main_paths.py  test_main_remaining_coverage.py  test_mcp_auth.py  test_mcp_authentication.py  test_mcp_load.py  test_mcp_run.py  test_mcp_runtime.py  test_mcp_server.py  test_mcp_server_api.py  test_mcp_stress.py  test_observation.py  test_omniparser.py  test_operations.py  test_session_manager.py  test_sessions.py  test_tool_execute.py  test_utils.py  test_utils_core.py  test_vision.py  test_vision_client.py
